[package]
name = "button-blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { workspace = true }
embassy-sync = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-futures = { workspace = true }

defmt = { workspace = true }
defmt-rtt = { workspace = true }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true }
panic-probe = { workspace = true }
futures = { workspace = true }
heapless = { workspace = true }
nb = { workspace = true }
embedded-storage = { workspace = true }
static_cell = { workspace = true }
